--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: hrmsdb
+      MYSQL_DATABASE: user
     ports:
       - "3306:3306"
     volumes:
@@ -21,7 +21,7 @@ services:
   springboot-service:
     image: tejas2506/hrms2-backend:t1
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-service:3306/hrmsdb
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-service:3306/user
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
     ports:
